--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "express-session": "^1.18.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
