updating twitch redirect uri

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ FACEBOOK_REDIRECT_URI=https://45bb-2400-adc7-2119-e700-c5d1-4ad8-4112-21e.ngrok-
 
 
 TWITCH_CLIENT_SECRET=yjazb1a9yzsa2gk8q5m542oedoavkf
-TWITCH_REDIRECT_URI=http://localhost:8000/api/twitch/callback
+TWITCH_REDIRECT_URI=https://kitor-nextjs.vercel.app/api/twitch/callback
 TWITCH_CLIENT_ID=qtetudhmkdk951vwjcvrj1ux7khx3q
 
 
